8019342: G1: High "Other" time most likely due to card redirtying

Parallelize card redirtying to decrease the time it takes.

Reviewed-by: brutisso